fix: align ResultBox with other forms

--- a/clovers-front/src/Forms/RenderOptions.scss
+++ b/clovers-front/src/Forms/RenderOptions.scss
@@ -15,6 +15,7 @@
 }
 
 .ResultBox {
+  margin: 0.5rem 0 0 0;
   border: 1px solid var(--grey-baseline);
   padding: 0.5rem;
   box-sizing: border-box;
